<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.polarplot10.Container3Fragment"
    android:id="@+id/frg_3">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stg_a" />
        <EditText
            android:id="@+id/id_et_a"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stg_b" />
        <EditText
            android:id="@+id/id_et_b"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stg_c" />
            <EditText
                android:id="@+id/id_et_c"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stg_d" />
            <EditText
                android:id="@+id/id_et_d"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stg_e" />
            <EditText
                android:id="@+id/id_et_e"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stg_f" />
            <EditText
                android:id="@+id/id_et_f"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"/>


        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_nm_save"
            android:id="@+id/btn_id_save"/>

    </LinearLayout>
    </LinearLayout>

</FrameLayout>
